Añadimos Testing Library Hooks

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/react-hooks": "^7.0.2",
     "i18next": "^17.0.16",
     "i18next-browser-languagedetector": "^3.0.3",
     "node-sass": "^4.12.0",
